# signaldeck

./: .gitignore  HANDOFF.md  README.md  pyproject.toml
config/: default.yaml
deploy/systemd/: README.md  signaldeck.service
scripts/: install_decoders.sh  setup_nginx.sh  setup_tailscale.sh
signaldeck/: config.py  main.py
signaldeck/ai/: anomaly_detector.py  audio_classifier.py  modulation_cnn.py  summarizer.py  training.py
signaldeck/api/: auth.py  server.py
signaldeck/decoders/: acars.py  adsb.py  all.py  aprs.py  base.py  dsd.py  fm_am.py  ism.py  noaa_apt.py  p25.py  pocsag.py  rds.py  registry.py  supervisor.py  weather_radio.py
signaldeck/engine/: audio_pipeline.py  (+12 more)
tests/: conftest.py  test_ai_anomaly.py  test_ai_audio.py  test_ai_modulation.py  test_ai_summarizer.py  test_ai_training.py  test_api_bookmarks.py  test_api_data_management.py  test_api_logs.py  test_api_process.py  test_api_server.py  test_api_signals.py  test_api_status_audio.py  test_audio_mode_config.py  test_audio_mode_gqrx_flip.py  test_audio_pipeline.py  test_auth.py  test_auth_extended.py  test_auth_manager_remember.py  test_auth_middleware.py  test_auth_routes.py  test_auth_sessions.py  test_bookmark_monitor.py  test_channelizer.py  test_classifier.py  test_cli_auth.py  test_config.py  test_config_auth_fields.py  test_database.py  test_database_clear.py  test_decoder_acars.py  test_decoder_adsb.py  test_decoder_aprs.py  test_decoder_base.py  test_decoder_dsd.py  test_decoder_fm_am.py  test_decoder_integration.py  test_decoder_ism.py  test_decoder_noaa_apt.py  test_decoder_p25.py  (+25 more)
(+32 files in other folders)
